--- a/index.html
+++ b/index.html
@@ -1,286 +1,18 @@
+
 <html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>Music Emotions Survey</title>
-		<link rel="stylesheet" href="css/style.css" />
-		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
-		<!-- Tag-it -->
-		<link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
-    	<link href="css/tagit.ui-zendesk.css" rel="stylesheet" type="text/css">
-   	 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-   		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="javascript/tag-it.js" type="text/javascript" charset="utf-8"></script>
-
-		<!-- Cross-Origin -->
-		<script type="text/javascript" src="javascript/jquery.ajax-cross-origin.min.js"></script>
-
-		<!-- Ubuntu font -->
-		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-
-	</head>
-	<body>
-		<!-- Loading gif -->
-		<img id="loading" src="images/ajax-loader.gif" alt="Loading..." height="20" width="20">
-
-		<div id="survey">
-				<progress id="progress-bar" value="0" max="9"></progress>
-			<div id="survey-content">
-
-				<!-- DIV INTRO -->
-				<div id="survey-content-intro">
-					<h1>Bonjour et bievenue!</h1>
-					<p>Cette enquête a pour but de tenter de trouver un lien entre les propriété théoriques d'une musique et les émotions qu'elle procure.
-						<br />Durant ce sondage, vous allez être invité à écouter <b>8 extraits</b> de musiques de différents styles pour ensuite indiquer le plus grand nombre possible de <i>mots-clés</i> qui décrivent les émotions que vous avez ressenties à l'écoute de cet extrait.
-						<br />Vos réponses sont ensuites stockées dans une base de données puis mise à disposition libre (après avoir été anonymisées).
-						<br />Le nom des musiques que vous entendrez ainsi que le lien vers la vidéo de laquelle provient l'extrait vous seront indiqués à la fin de l'enquête.
-						<br /><i>Pour plus d'informations, <a href="https://www.github.com/lancelotbla/music-emotions-survey/">cliquez ici.</a></i>
-						<!-- Link to change -->
-						<br/><br/><b>Pour commencer, veuillez renseigner quelques informations puis cliquez sur "Suivant".</b></p>
-						<br />
-						<form id="form-intro" action="">
-							<label for="name">Nom : </label><input type="text" name="name" id="name" required />
-							<br/><br />
-							<input name="musician" id="musician" type="checkbox" /><label for="musician"><i>Je suis musicien/Je pratique la musique</i></label>
-							<br />
-							<input name="listener" id="listener" type="checkbox" /><label for="listener"><i>J'écoute régulièrement de la musique.</i></label>
-							<br /><br />
-							<input type="submit" value="Suivant" />
-						</form>
-				</div>
-
-				<!-- DIV SURVEY -->
-				<div id="survey-content-music">
-					<h1 id="extract-number">Extrait X</h1>
-					<audio id="music_player" type="audio/mp3" controls="controls"></audio><br /><i>Error? <a href="javascript:void(0)" id="refreshAudio">Refresh</a></i><br /><br /><br />
-
-				    <form id="form" action="">
-							<input name="known" id="known" type="checkbox" /><label for="known"><i>Je connaissais déjà cet extrait</i></label><br />
-							<p>Veuillez entrer les émotions que cet extrait vous fait ressentir :</p>
-				    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
-				    	<ul id="emotions-field"></ul>
-				    	<input type="submit" value="Next" />
-				    </form>
-				</div>
-
-				<!-- DIV END -->
-				<div id="survey-content-end">
-					<h1>Thank you</h1>
-					<p><a href="javascript:void(0)" id="seeListMusic">See the list of musics</a></p>
-					<ul id="music-list-html">
-					</ul>
-				</div>
-
-			</div>
-		</div>
-
-		<script>
-		$(document).ready(function(){
-			//Hide other divs
-			$("#survey-content-music").hide();
-			$("#survey-content-end").hide();
-
-			//Progress var for progress bar
-			var progress=1;
-
-			//Boolean List Displayed
-			var list_displayed=false;
-
-			//Initialize Name var
-			var name="";
-
-			//Music list and shuffled list.
-			var list_music=['asdg_ftsombaf','b_s2','c_xy','cc_o','css_dm','dl_ritd','ee_pac1','gd_sj','gg_rib','jc_gs','jc_oos','jsb_ags','jt_cstf','jw_oa','lvb_s72','m_ctk','m_ste','mo_tb','rw_ms','s_b','tc_ms','tdbq_bralt','wam_ps141'];
-			var list_music_shuffled=shuffle(list_music).slice(0,8);
-
-			var MusicType = function(){};
-			MusicType.prototype = {
-			    id: null,
-			    title: null,
-					artist: null,
-					youtube: null
-			};
-
-			var music = [];
-			for (var i = 0; i<8; i++){
-				var element = new MusicType();
-				element.id=list_music_shuffled[i];
-				music.push(element);
-			}
-
-			//Refresh Audio link
-			$("#refreshAudio").click(function(){
-				$("#music_player").prop("src", "music/"+music[progress-2].id+".mp3");
-			});
-
-
-			//Tag-It field
-			var sampleTagsFrench = ['Joie', 'Colère', 'Haine', 'Rage', 'Tristesse', 'Peur', 'Tranquillité', 'Soulagement', 'Interrogation', 'Angoisse', 'Peine', 'Dégoût', 'Stress', 'Frustration', 'Tension', 'Dérangement', 'Fureur', 'Exaspération', 'Affolement',
-			'Excitation', 'Alerte', 'Confusion', 'Réticence', 'Désarroi', 'Détresse', 'Déprime', 'Effroi', 'Épouvante', 'Désespoir', 'Méfiance', 'Ennui', 'Perplexité', 'Épuisement', 'Résignation' ,'Perturbation', 'Impuissance', 'Solitude', 'Pression', 'Souffrance',
-			'Gêne', 'Lassitude', 'Surprise', 'Terreur', 'Calme'];
-
-			$('#emotions-field').tagit({
-				availableTags: sampleTagsFrench,
-				// This will make Tag-it submit a single form value, as a comma-delimited field.
-				singleField: true,
-				singleFieldNode: $('#emotions-values')
-			});
-
-			//Ajax Loading
-			$(document)
-		  .ajaxStart(function () {
-				$("#loading").css("opacity",1).fadeIn(150);
-		  })
-		  .ajaxStop(function () {
-				$("#loading").fadeOut(150);
-		  });
-
-			//On submit Intro Form
-			$("#form-intro").submit(function(event){
-				//Verify if field is filled
-				if(!$("#name").val()){
-					alert("Please fill the field");
-				} else{
-					//POST AJAX
-					$.ajax({
-						type: 'POST',
-						url: 'https://music-emotions-survey-php.herokuapp.com/post.php',
-						//if local: url: 'http://localhost:8888/Other/enquete-php/post.php',
-						crossDomain: true,
-						data: "name="+$("#name").val()+"&musician="+$("musician").is(":checked")+"&listener="+$("listener").is(":checked"),
-						dataType: 'json',
-						success: function(responseData, textStatus, jqXHR) {
-							//Check if post succeeded.
-							if(responseData.status=="success"){
-								name=$("#name").val();
-								progress++;
-								$('#survey-content-intro').fadeOut('slow', function(){
-									//Text Extract
-									$('#extract-number').text("Extrait "+(progress-1)+"/8");
-
-									//Prepare Music
-									$("#music_player").prop("src", "music/"+music[progress-2].id+".mp3");
-
-						    	$('#survey-content-music').fadeIn('slow', function(){
-										$("#progress-bar").prop("value", progress-1);
-									});
-								});
-							} else { //Else: display error
-								alert('Error: '+responseData.message);
-							}
-						},
-						error: function (responseData, textStatus, errorThrown) {
-	  					alert('Critical Error');
-						}
-					});
-				}
-				event.preventDefault();
-			});
-
-			//On submit survey
-			$("#form").submit(function(event){
-				//Verify if field is filled
-				if(!$("#emotions-values").val()){
-					alert("Please fill the field");
-				} else{
-					//POST AJAX
-					$.ajax({
-						type: 'POST',
-						url: 'https://music-emotions-survey-php.herokuapp.com/post.php',
-						//if local: url: 'http://localhost:8888/Other/enquete-php/post.php',
-						crossDomain: true,
-						data: "name="+name+"&extract="+(progress-1)+"&id="+music[progress-2].id+"&emotions-values="+$("#emotions-values").val()+"&known="+$("#known").is(":checked"),
-						dataType: 'json',
-						success: function(responseData, textStatus, jqXHR) {
-							//Check if post succeeded.
-							if(responseData.status=="success"){
-								//If Music left: Recreate page with new Music
-								if(progress<9){
-									progress++;
-									$('#survey-content-music').fadeOut('slow', function(){
-										//Text Extract
-										$('#extract-number').text("Extrait "+(progress-1)+"/8");
-
-										//Prepare Music
-										$("#music_player").prop("src", "music/"+music[progress-2].id+".mp3");
-
-										//Erase data of previous page
-										$("#known").prop("checked", false);
-										$("#emotions-field").tagit('removeAll');
-
-							    	$('#survey-content-music').fadeIn('slow', function(){
-											$("#progress-bar").prop("value", progress-1);
-										});
-									});
-								} //Else: Show End Page
-								else {
-									progress++;
-									$('#survey-content-music').fadeOut('slow', function(){
-						    		$('#survey-content-end').fadeIn('slow', function(){
-											$("#progress-bar").prop("value", progress-1);
-										});
-									});
-								}
-							} else { //Else: display error
-								alert('Error: '+responseData.message);
-							}
-						},
-						error: function (responseData, textStatus, errorThrown) {
-	  					alert('Critical Error');
-						}
-					});
-				}
-				event.preventDefault();
-			});
-
-			//Link: See the list of music
-			$("#seeListMusic").click(function(){
-				if(!list_displayed){
-					//AJAX Request
-					$.ajax({
-						type: "GET",
-						url: "music/music.xml",
-						dataType: "xml",
-						success: function(xml){
-							//Fill music array with elements from xml
-							for (var i = 0; i<8; i++){
-								var element = $(xml).find('music[id="'+music[i].id+'"]');
-								music[i].title=element.find("title").text();
-								music[i].artist=element.find("artist").text();
-								music[i].youtube=element.find("youtube").text();
-							}
-
-							//Generate list
-							$listSelector = $("#music-list-html")
-							$.each(music, function(i) {
-							    $listSelector.append('<li><b>Extrait '+(i+1)+':</b> <a target="_blank" href="https://youtu.be/'+music[i].youtube+'">'+music[i].artist+' - '+music[i].title+'</a></li>');
-							});
-							list_displayed=true;
-						}
-					});
-				} else { // Do nothing
-				}
-			});
-		});
-
-		function shuffle(array) {
-			var currentIndex = array.length, temporaryValue, randomIndex;
-
-			// While there remain elements to shuffle...
-			while (0 !== currentIndex) {
-
-				// Pick a remaining element...
-				randomIndex = Math.floor(Math.random() * currentIndex);
-				currentIndex -= 1;
-
-				// And swap it with the current element.
-				temporaryValue = array[currentIndex];
-				array[currentIndex] = array[randomIndex];
-				array[randomIndex] = temporaryValue;
-			}
-
-			return array;
-		}
-		</script>
-	</body>
+   <head>
+     <title>Redirecting...</title>
+     <script type="text/javascript">
+             var userLang = (navigator.language || navigator.userLanguage).split("-")[0];
+             if (userLang == "fr") {
+               window.location.href = "./fr/index.html"
+             }
+             else {
+               window.location.href = "./en/index.html"
+             }
+     </script>
+   </head>
+   <body>
+     <h1>Redirecting...</h1>
+   </body>
 </html>
