--- a/en/index.html
+++ b/en/index.html
@@ -18,8 +18,16 @@
 		<!-- Ubuntu font -->
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
+		<!-- Dynamic Height iFrame -->
+		<script>
+			function adjust_iframe_height(){
+			    var actual_height = document.getElementById('survey').scrollHeight;
+			    parent.postMessage(actual_height,"*");
+			    //* = No domain restriction on hosting pages
+			}
+		</script>
 	</head>
-	<body>
+	<body onload="adjust_iframe_height();">
 		<!-- Loading gif -->
 		<img id="loading" src="../images/ajax-loader.gif" alt="Loading..." height="20" width="20">
 
