Solved Bug #4: Can't display list of musics

--- a/en/index.html
+++ b/en/index.html
@@ -249,7 +249,7 @@
 					//AJAX Request
 					$.ajax({
 						type: "GET",
-						url: "music/music.xml",
+						url: "../music/music.xml",
 						dataType: "xml",
 						success: function(xml){
 							//Fill music array with elements from xml
