--- a/en/index.html
+++ b/en/index.html
@@ -42,7 +42,7 @@
 						<br />During this survey, you will be invited to listen to <b>8 music extracts</b> of various styles and to indicate as many <i>keywords</i> as possible describing the different emotions you felt while listening to this extract.
 						<br />Your answers will then be stocked on a database and they will be made publicly available (after being anonymised).
 						<br />The names of the musics you will hear as well as the link towards the video from which it has been taken will be indicated at the end of the survey.
-						<br /><i>For more information, <a href="https://www.github.com/lancelotbla/music-emotions-survey/">please click here.</a></i>
+						<br /><i>For more information, <a href="http://tpemusiquecerveau.rf.gd/">please click here.</a></i>
 						<!-- Link to change -->
 						<br/><br/><b>To begin, please enter some information then click on the <b>Next</b> button.</b></p>
 						<br />
@@ -64,7 +64,7 @@
 
 				    <form id="form" action="">
 							<input name="known" id="known" type="checkbox" /><label for="known"><i>I already knew this extract.</i></label><br />
-							<p>Please enter the emotions you felt while listening to the extract:</p>
+							<p>Please enter the emotions you felt while listening to the extract (please separate the keywords with a space or a coma):</p>
 				    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
 				    	<ul id="emotions-field"></ul>
 				    	<input type="submit" value="Next" />
@@ -74,7 +74,7 @@
 				<!-- DIV END -->
 				<div id="survey-content-end">
 					<h1>Thank you !</h1>
-					<p>Don't hesitate to check <a href="#">our website</a> for more information about the context of this survey !</p><br /><br />
+					<p>Don't hesitate to check <a href="http://tpemusiquecerveau.rf.gd/">our website</a> for more information about the context of this survey !</p><br /><br />
 					<!-- Link to add -->
 					<p><a href="javascript:void(0)" id="seeListMusic">See the list of musics</a></p>
 					<ul id="music-list-html">
