--- a/fr/index.html
+++ b/fr/index.html
@@ -42,7 +42,7 @@
 						<br />Durant ce sondage, vous allez être invité à écouter <b>8 extraits</b> de musiques de différents styles pour ensuite indiquer le plus grand nombre possible de <i>mots-clés</i> qui décrivent les émotions que vous avez ressenties à l'écoute de cet extrait.
 						<br />Vos réponses sont ensuites stockées dans une base de données puis mise à disposition libre (après avoir été anonymisées).
 						<br />Le nom des musiques que vous entendrez ainsi que le lien vers la vidéo de laquelle provient l'extrait vous seront indiqués à la fin de l'enquête.
-						<br /><i>Pour plus d'informations, <a href="https://www.github.com/lancelotbla/music-emotions-survey/">cliquez ici.</a></i>
+						<br /><i>Pour plus d'informations, <a href="http://tpemusiquecerveau.rf.gd/">cliquez ici.</a></i>
 						<!-- Link to change -->
 						<br/><br/><b>Pour commencer, veuillez renseigner quelques informations puis cliquez sur "Suivant".</b></p>
 						<br />
@@ -64,7 +64,7 @@
 
 				    <form id="form" action="">
 							<input name="known" id="known" type="checkbox" /><label for="known"><i>Je connaissais déjà cet extrait</i></label><br />
-							<p>Veuillez entrer les émotions que cet extrait vous fait ressentir :</p>
+							<p>Veuillez entrer les émotions que cet extrait vous fait ressentir (veuillez séparer les mots clés par un espace ou une virgule) :</p>
 				    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
 				    	<ul id="emotions-field"></ul>
 				    	<input type="submit" value="Suivant" />
@@ -74,7 +74,7 @@
 				<!-- DIV END -->
 				<div id="survey-content-end">
 					<h1>Merci !</h1>
-					<p>N'hésitez pas à vous rendre sur <a href="#">notre page internet</a> pour plus de détails sur le contexte de cette enquête !</p><br /><br />
+					<p>N'hésitez pas à vous rendre sur <a href="http://tpemusiquecerveau.rf.gd/">notre page internet</a> pour plus de détails sur le contexte de cette enquête !</p><br /><br />
 					<!-- Link to add -->
 					<p><a href="javascript:void(0)" id="seeListMusic">Voir la liste des musiques</a></p>
 					<ul id="music-list-html">
