Added Sense - Last Cigarette

--- a/en/index.html
+++ b/en/index.html
@@ -100,7 +100,7 @@
 			var name="";
 
 			//Music list and shuffled list.
-			var list_music=['asdg_ftsombaf','b_s2','c_xy','cc_o','css_dm','dl_ritd','ee_pac1','gd_sj','gg_rib','jc_gs','jc_oos','jsb_ags','jt_cstf','jw_oa','lvb_s72','m_ctk','m_ste','mo_tb','rw_ms','s_b','tc_ms','tdbq_bralt','wam_ps141'];
+			var list_music=['asdg_ftsombaf','b_s2','c_xy','cc_o','css_dm','dl_ritd','ee_pac1','gd_sj','gg_rib','jc_gs','jc_oos','jsb_ags','jt_cstf','jw_oa','lvb_s72','m_ctk','m_ste','mo_tb','rw_ms','s_b','s_lc','tc_ms','tdbq_bralt','wam_ps141'];
 			var list_music_shuffled=shuffle(list_music).slice(0,8);
 
 			var MusicType = function(){};
