--- a/fr/index.html
+++ b/fr/index.html
@@ -38,9 +38,9 @@
 				<!-- DIV INTRO -->
 				<div id="survey-content-intro">
 					<h1>Bonjour et bievenue!</h1>
-					<p>Cette enquête a pour but de tenter de trouver un lien entre les propriété théoriques d'une musique et les émotions qu'elle procure.
+					<p>Cette enquête a pour but de tenter de trouver un lien entre les propriétés théoriques d'une musique et les émotions qu'elle procure.
 						<br />Durant ce sondage, vous allez être invité à écouter <b>8 extraits</b> de musiques de différents styles pour ensuite indiquer le plus grand nombre possible de <i>mots-clés</i> qui décrivent les émotions que vous avez ressenties à l'écoute de cet extrait.
-						<br />Vos réponses sont ensuites stockées dans une base de données puis mise à disposition libre (après avoir été anonymisées).
+						<br />Vos réponses sont ensuites stockées dans une base de données puis mises à disposition (après avoir été anonymisées).
 						<br />Le nom des musiques que vous entendrez ainsi que le lien vers la vidéo de laquelle provient l'extrait vous seront indiqués à la fin de l'enquête.
 						<br /><i>Pour plus d'informations, <a href="http://tpemusiquecerveau.rf.gd/">cliquez ici.</a></i>
 						<!-- Link to change -->
