Added share link

--- a/en/index.html
+++ b/en/index.html
@@ -74,8 +74,13 @@
 				<!-- DIV END -->
 				<div id="survey-content-end">
 					<h1>Thank you !</h1>
-					<p>Don't hesitate to check <a href="http://tpemusiquecerveau.rf.gd/">our website</a> for more information about the context of this survey !</p><br /><br />
-					<!-- Link to add -->
+					<p>Don't hesitate to check <a href="http://tpemusiquecerveau.rf.gd/" target="_blank">our website</a> for more information about the context of this survey !</p>
+					<h4>Share this survey with your friends :</h4>
+					<a href="http://www.facebook.com/sharer.php?u=http://tpemusiquecerveau.rf.gd/enquete.php" target="_blank">
+						<img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /></a>
+					<a href="https://twitter.com/share?url=http://tpemusiquecerveau.rf.gd/enquete.php" target="_blank">
+        		<img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /></a>
+					<br/><br/><br />
 					<p><a href="javascript:void(0)" id="seeListMusic">See the list of musics</a></p>
 					<ul id="music-list-html">
 					</ul>
