--- a/fr/index.html
+++ b/fr/index.html
@@ -74,8 +74,13 @@
 				<!-- DIV END -->
 				<div id="survey-content-end">
 					<h1>Merci !</h1>
-					<p>N'hésitez pas à vous rendre sur <a href="http://tpemusiquecerveau.rf.gd/">notre page internet</a> pour plus de détails sur le contexte de cette enquête !</p><br /><br />
-					<!-- Link to add -->
+					<p>N'hésitez pas à vous rendre sur <a href="http://tpemusiquecerveau.rf.gd/" target="_blank">notre page internet</a> pour plus de détails sur le contexte de cette enquête !</p>
+					<h4>Partagez cette enquête avec vos amis :</h4>
+					<a href="http://www.facebook.com/sharer.php?u=http://tpemusiquecerveau.rf.gd/enquete.php" target="_blank">
+						<img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /></a>
+					<a href="https://twitter.com/share?url=http://tpemusiquecerveau.rf.gd/enquete.php" target="_blank">
+        		<img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /></a>
+					<br/><br/><br />
 					<p><a href="javascript:void(0)" id="seeListMusic">Voir la liste des musiques</a></p>
 					<ul id="music-list-html">
 					</ul>
